--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "Logger",
-  "version": "0.8.1",
+  "name": "logger-utils",
+  "version": "0.8.2",
   "description": "Simple log util to control activity of your programm",
   "main": "index.js",
-  "private": true,
   "author": "Andrey Pavlov && Alexander Dadukin",
+  "keywords": ["log", "logger", "info", "warning", "error"],
+	"homepage": "https://github.com/sasd97/logger-utils",
+	"bugs": {
+		"url": "https://github.com/sasd97/logger-utils/issues"
+	},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sasd97/logger-utils.git"
+  },
   "license": "MIT",
   "scripts": {
     "test": "mocha test --reporter spec"
