--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "colors": "1.1.2",
     "dateformat": "1.0.12",
+    "moment": "2.12.0",
     "mkdirp": "0.5.1",
     "tracer": "0.8.3",
     "underscore": "1.8.3"
